--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,61 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.selectors {
+  display: flex;
+  flex-direction: column;
+  max-width: 20%;
+}
+
+.print-selectors {
+  display:none;
+}
+
+.qrcode {
+  max-width: "64";
+  width: "100%";
+  background: "white";
+  padding: "16px";
+}
+
+@media print {
+  .selectors {
+    display:none;
+  }
+  .print-selectors {
+    display: block;
+  }
+}
+
+table, th, td {
+  border: 1px solid;
+}
+
+tr {
+  height: 4em;
+}
+
+table {
+  border-collapse: collapse;
+}
+
+.tcol-question{
+  width: 15em;
+  height: 4em;
+}
+
+.tcol-ans{
+  width: 7em;
+  height: 4em;
 }
