--- a/src/index.css
+++ b/src/index.css
@@ -12,22 +12,48 @@ code {
     monospace;
 }
 
+.outer {
+  display: flex;
+  justify-content: center;
+}
+
+.app {
+  margin: 10px;
+  padding: 10px;
+}
+
+.selector-block {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  
+}
+
+
 .selectors {
   display: flex;
   flex-direction: column;
-  max-width: 20%;
+  width: 30%;
 }
 
-.print-selectors {
-  display:none;
+.selector {
+  margin: 5px;
+  display: flex;
+  justify-content: space-between;
+  font-size: large;
 }
 
 .qrcode {
   max-width: "64";
   width: "100%";
   background: "white";
-  padding: "16px";
 }
+
+
+.print-selectors {
+  display:none;
+}
+
 
 @media print {
   .selectors {
@@ -36,19 +62,51 @@ code {
   .print-selectors {
     display: block;
   }
+  button {
+    display:none;
+  }
 }
 
-table, th, td {
+button {
+  font-size: large;
+  background-color: rgb(0, 70, 199);
+  color: #ffffff;
+  padding: 10px;
+  border-radius: 10%;
+}
+
+th, td {
   border: 1px solid;
+  padding: 5px;
+}
+
+table {
+  border: 1px solid;
+  border-collapse: collapse;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
 
 tr {
   height: 4em;
 }
 
-table {
-  border-collapse: collapse;
+.tick-box-td {
+  background-color: rgb(215, 215, 215);
+  text-align: center;
+  vertical-align: middle;
 }
+
+.tick-box {
+  height: 30px;
+  width: 30px;
+  border: 1px solid black;
+  display: inline-block;
+  vertical-align: top;
+  background-color: white;
+}
+
+
 
 .tcol-question{
   width: 15em;
